Add alt tags to home page images

--- a/views/index.haml
+++ b/views/index.haml
@@ -33,7 +33,7 @@
     %h3#tour-head.subhead Weekly report example
     .row
       .col-md-12
-        %img.img-responsive{:src => "img/screenshot1.png"}
+        %img.img-responsive{:src => "img/screenshot1.png", :alt => 'Weekly report screenshot'}
 
 .container
   %h3#faqs.subhead Frequently Asked Questions
@@ -75,10 +75,10 @@
     .row.stack
       .col-md-10.col-md-offset-1.text-center
         %a{:href => 'http://www.ruby-lang.org'}
-          %img.img-responsive{:src => "img/stack/ruby.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Ruby"}
+          %img.img-responsive{:src => "img/stack/ruby.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Ruby", :alt => 'Ruby logo'}
         %a{:href => 'http://www.sinatrarb.com'}
-          %img.img-responsive{:src => "img/stack/sinatra.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Sinatra"}
+          %img.img-responsive{:src => "img/stack/sinatra.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Sinatra", :alt => 'Sinatra logo'}
         %a{:href => 'http://redis.io'}
-          %img.img-responsive{:src => "img/stack/redis.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Redis"}
+          %img.img-responsive{:src => "img/stack/redis.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Redis", :alt => 'Redis logo'}
         %a{:href => 'http://sidekiq.org'}
-          %img.img-responsive{:src => "img/stack/sidekiq.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Sidekiq"}
+          %img.img-responsive{:src => "img/stack/sidekiq.png", :'aria-hidden' => "true", :'data-toggle' => "tooltip", :'data-placement' => "top", :title => "Sidekiq", :alt => 'Sidekiq logo'}
