Parametrize dev email address and add the ability to send an email to the dev on each signup

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -51,7 +51,7 @@
           %span.footer
             %a{:href => "/faq"} FAQ
           %span.footer
-            %a{:href => "mailto:support@githubnotifier.io"} Support
+            %a{:href => "mailto:#{settings.CONFIG['dev_email_address']}"} Support
           %span.footer
             %a{:href => "https://github.com/andreausu/github-notifier"}
               %i.fa.fa-github.fa-lg
