Add facebook link in footer

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -58,6 +58,9 @@
           %span.footer
             %a{:href => "https://twitter.com/githubnotifier"}
               %i.fa.fa-twitter.fa-lg
+          %span.footer
+            %a{:href => "https://www.facebook.com/githubnotifier"}
+              %i.fa.fa-facebook
 
     %script(src="/js/jquery.min.js?v=#{@deploy_id}")
     %script(src="/js/bootstrap.min.js?v=#{@deploy_id}")
