--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,26 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1")
     %title GitHub Notifier#{(defined?(@page_title) ? ' - ' + @page_title : '')}
 
+    %link{:href => "/img/favicon/apple-touch-icon-57x57.png", :rel => "apple-touch-icon", :sizes => "57x57"}
+    %link{:href => "/img/favicon/apple-touch-icon-60x60.png", :rel => "apple-touch-icon", :sizes => "60x60"}
+    %link{:href => "/img/favicon/apple-touch-icon-72x72.png", :rel => "apple-touch-icon", :sizes => "72x72"}
+    %link{:href => "/img/favicon/apple-touch-icon-76x76.png", :rel => "apple-touch-icon", :sizes => "76x76"}
+    %link{:href => "/img/favicon/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}
+    %link{:href => "/img/favicon/apple-touch-icon-120x120.png", :rel => "apple-touch-icon", :sizes => "120x120"}
+    %link{:href => "/img/favicon/apple-touch-icon-144x144.png", :rel => "apple-touch-icon", :sizes => "144x144"}
+    %link{:href => "/img/favicon/apple-touch-icon-152x152.png", :rel => "apple-touch-icon", :sizes => "152x152"}
+    %link{:href => "/img/favicon/apple-touch-icon-180x180.png", :rel => "apple-touch-icon", :sizes => "180x180"}
+    %link{:href => "/img/favicon/favicon-32x32.png", :rel => "icon", :sizes => "32x32", :type => "image/png"}
+    %link{:href => "/img/favicon/android-chrome-192x192.png", :rel => "icon", :sizes => "192x192", :type => "image/png"}
+    %link{:href => "/img/favicon/favicon-96x96.png", :rel => "icon", :sizes => "96x96", :type => "image/png"}
+    %link{:href => "/img/favicon/favicon-16x16.png", :rel => "icon", :sizes => "16x16", :type => "image/png"}
+    %link{:href => "/img/favicon/manifest.json", :rel => "manifest"}
+    %link{:href => "/img/favicon/favicon.ico", :rel => "shortcut icon"}
+    %meta{:content => "#da532c", :name => "msapplication-TileColor"}
+    %meta{:content => "/img/favicon/mstile-144x144.png", :name => "msapplication-TileImage"}
+    %meta{:content => "/img/favicon/browserconfig.xml", :name => "msapplication-config"}
+    %meta{:content => "#ffffff", :name => "theme-color"}
+
     %link(href="/css/bootstrap.min.css?v=#{@deploy_id}" rel="stylesheet")
     %link(href="/css/font-awesome.min.css?v=#{@deploy_id}" rel="stylesheet")
     %link(href="/css/bootstrap-social.css?v=#{@deploy_id}" rel="stylesheet")
