--- a/views/faq.haml
+++ b/views/faq.haml
@@ -1,12 +1,12 @@
 %section#faq-list
 
-  %h3 What is GitHub Notifier?
+  %h3 What is Git Notifier?
   .answer
-    %p GitHub Notifier is a service that helps you keep track of all the events happening to your GitHub user and repositories.<br />If you're watching a lot of repositories and following a lot of people your timeline will most certainly be cluttered in events and it's easy to miss something that could be nice to know, like somebody that starred or started watching one of your repositories or even following you and GitHub Notifier will even let you know when somebody is no longer following you.<br />You can decide how often you wish to receive notifications (as soon as possible or in a nice daily or weekly report) and for which events.
+    %p Git Notifier is a service that helps you keep track of all the events happening to your GitHub user and repositories.<br />If you're watching a lot of repositories and following a lot of people your timeline will most certainly be cluttered in events and it's easy to miss something that could be nice to know, like somebody that starred or started watching one of your repositories or even following you and Git Notifier will even let you know when somebody is no longer following you.<br />You can decide how often you wish to receive notifications (as soon as possible or in a nice daily or weekly report) and for which events.
 
   %h3 Is it free?
   .answer
-    %p Short answer: yes. In the future we may have to offer premium services (eg: better email deliverability, notifications checks happening more often) for a small fee should the server costs increase too much.<br />Anyway, since this project is completely open source you will always be able to just host you own version of GitHub Notifier for free.
+    %p Short answer: yes. In the future we may have to offer premium services (eg: better email deliverability, notifications checks happening more often) for a small fee should the server costs increase too much.<br />Anyway, since this project is completely open source you will always be able to just host you own version of Git Notifier for free.
 
   %h3 Will you send me spam?
   .answer
@@ -26,12 +26,16 @@
 
   %h3 I find this service useful, how can I help to keep it running?
   .answer
-    %p Thanks for asking! You could help improve the service by contributing to our public <a href="https://github.com/andreausu/github-notifier">GitHub repository</a>, or you could make a donation using <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2NUBLSKKDMHC2&lc=US&item_name=Donation&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">PayPal</a> or Bitcoin: <a href="https://blockchain.info/address/12NzvEg19KZoNuQzT39mcmvDD7K14wJenR">12NzvEg19KZoNuQzT39mcmvDD7K14wJenR</a>
+    %p Thanks for asking! You could help improve the service by contributing to our public <a href="https://github.com/andreausu/git-notifier">GitHub repository</a>, or you could make a donation using <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2NUBLSKKDMHC2&lc=US&item_name=Donation&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">PayPal</a> or Bitcoin: <a href="https://blockchain.info/address/12NzvEg19KZoNuQzT39mcmvDD7K14wJenR">12NzvEg19KZoNuQzT39mcmvDD7K14wJenR</a>
 
-  %h3 Is GitHub Notifer open source? Can I get the source code?
+  %h3 Is Git Notifer open source? Can I get the source code?
   .answer
-    %p Yes! We love OSS, you can find all the code that powers this service on <a href="https://github.com/andreausu/github-notifier">GitHub</a>. This project will always be open source.
+    %p Yes! We love OSS, you can find all the code that powers this service on <a href="https://github.com/andreausu/git-notifier">GitHub</a>. This project will always be open source.
 
-  %h3 Who built GitHub Notifier?
+  %h3 Who built Git Notifier?
   .answer
     %p <a href="https://twitter.com/andreausu">Andrea Usuelli</a>
+
+  %h3 Is Git Notifier affiliated in any way with GitHub?
+  .answer
+    %p No, Git Notifier is not an official GitHub project.
