--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,8 @@
 #top.jumbotron
   .container
-    %h1<
-      GitHub
-      %span.orange> Notifier
+    %h1
+      Git
+      %span.orange Notifier
     %h2 Get email notifications when someone stars or forks<br />one of your GitHub repos and follows/unfollows you.
     %div.col-md-4.col-md-offset-4
       %a.btn.btn-lg.btn-block.btn-social.btn-github(href="/authorize")
@@ -39,24 +39,24 @@
   %h3#faqs.subhead Frequently Asked Questions
   .row.faqs
     %p.col-md-4.col-sm-6
-      %strong What is GitHub Notifier?
+      %strong What is Git Notifier?
       %br
-        GitHub Notifier is a service that helps you keep track of all the events happening to your GitHub user and repositories.<br />
+        Git Notifier is a service that helps you keep track of all the events happening to your GitHub user and repositories.<br />
         If you're watching a lot of repositories and following a lot of people your timeline will most certainly be cluttered in events
         and it's easy to miss something that could be nice to know, like somebody that starred or started watching
-        one of your repositories or even following you and GitHub Notifier will even let you know when somebody is no longer following you.<br />
+        one of your repositories or even following you and Git Notifier will even let you know when somebody is no longer following you.<br />
         You can decide how often you wish to receive notifications (as soon as possible or in a nice daily or weekly report) and for which events.
     %p.col-md-4.col-sm-6
       %strong Is it free?
       %br
         Yes! In the future we may have to offer premium services (eg: better email deliverability, ...)
         for a small fee should the server costs increase too much.<br />
-        Anyway, since this project is open source you will always be able to just host your own version of GitHub Notifier for free.
+        Anyway, since this project is open source you will always be able to just host your own version of Git Notifier for free.
     %p.col-md-4.col-sm-6
-      %strong Is GitHub Notifer open source?
+      %strong Is Git Notifer open source?
       %br
         Yes! We love OSS, so rest assured that this project will always be completely open source.<br />
-        You can find all the code that powers this service on <a href="https://github.com/andreausu/github-notifier">GitHub</a>.<br />
+        You can find all the code that powers this service on <a href="https://github.com/andreausu/git-notifier">GitHub</a>.<br />
         You are more than welcome to contibute if you'd like to!
     %p.col-md-4.col-sm-6
       %strong Will you send me spam?
