--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,27 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1")
-    %title GitHub Notifier#{(defined?(@page_title) ? ' - ' + @page_title : '')}
-
-    %link{:href => "/img/favicon/apple-touch-icon-57x57.png", :rel => "apple-touch-icon", :sizes => "57x57"}
-    %link{:href => "/img/favicon/apple-touch-icon-60x60.png", :rel => "apple-touch-icon", :sizes => "60x60"}
-    %link{:href => "/img/favicon/apple-touch-icon-72x72.png", :rel => "apple-touch-icon", :sizes => "72x72"}
-    %link{:href => "/img/favicon/apple-touch-icon-76x76.png", :rel => "apple-touch-icon", :sizes => "76x76"}
-    %link{:href => "/img/favicon/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}
-    %link{:href => "/img/favicon/apple-touch-icon-120x120.png", :rel => "apple-touch-icon", :sizes => "120x120"}
-    %link{:href => "/img/favicon/apple-touch-icon-144x144.png", :rel => "apple-touch-icon", :sizes => "144x144"}
-    %link{:href => "/img/favicon/apple-touch-icon-152x152.png", :rel => "apple-touch-icon", :sizes => "152x152"}
-    %link{:href => "/img/favicon/apple-touch-icon-180x180.png", :rel => "apple-touch-icon", :sizes => "180x180"}
-    %link{:href => "/img/favicon/favicon-32x32.png", :rel => "icon", :sizes => "32x32", :type => "image/png"}
-    %link{:href => "/img/favicon/android-chrome-192x192.png", :rel => "icon", :sizes => "192x192", :type => "image/png"}
-    %link{:href => "/img/favicon/favicon-96x96.png", :rel => "icon", :sizes => "96x96", :type => "image/png"}
-    %link{:href => "/img/favicon/favicon-16x16.png", :rel => "icon", :sizes => "16x16", :type => "image/png"}
-    %link{:href => "/img/favicon/manifest.json", :rel => "manifest"}
-    %link{:href => "/img/favicon/favicon.ico", :rel => "shortcut icon"}
-    %meta{:content => "#da532c", :name => "msapplication-TileColor"}
-    %meta{:content => "/img/favicon/mstile-144x144.png", :name => "msapplication-TileImage"}
-    %meta{:content => "/img/favicon/browserconfig.xml", :name => "msapplication-config"}
-    %meta{:content => "#ffffff", :name => "theme-color"}
+    %title Git Notifier#{(defined?(@page_title) ? ' - ' + @page_title : '')}
 
     %link(href="/css/bootstrap.min.css?v=#{@deploy_id}" rel="stylesheet")
     %link(href="/css/font-awesome.min.css?v=#{@deploy_id}" rel="stylesheet")
@@ -48,7 +28,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand.nav-link{:href => "/"} GitHubNotifier
+          %a.navbar-brand.nav-link{:href => "/"} Git Notifier
         .collapse.navbar-collapse.navbar-ex1-collapse
           %ul.nav.navbar-nav.navbar-right
             - get_menu().each do |item|
@@ -73,13 +53,13 @@
           %span.footer
             %a{:href => "mailto:#{settings.CONFIG['dev_email_address']}"} Support
           %span.footer
-            %a{:href => "https://github.com/andreausu/github-notifier"}
+            %a{:href => "https://github.com/andreausu/git-notifier"}
               %i.fa.fa-github.fa-lg
           %span.footer
-            %a{:href => "https://twitter.com/githubnotifier"}
+            %a{:href => "https://twitter.com/gitnotifier"}
               %i.fa.fa-twitter.fa-lg
           %span.footer
-            %a{:href => "https://www.facebook.com/githubnotifier"}
+            %a{:href => "https://www.facebook.com/gitnotifier"}
               %i.fa.fa-facebook
 
     %script(src="/js/jquery.min.js?v=#{@deploy_id}")
