No space between Git and Notifier

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,8 @@
 #top.jumbotron
   .container
-    %h1
+    %h1<
       Git
-      %span.orange Notifier
+      %span.orange> Notifier
     %h2 Get email notifications when someone stars or forks<br />one of your GitHub repos and follows/unfollows you.
     %div.col-md-4.col-md-offset-4
       %a.btn.btn-lg.btn-block.btn-social.btn-github(href="/authorize")
