Add link to status page

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -51,6 +51,8 @@
           %span.footer
             %a{:href => "/faq"} FAQ
           %span.footer
+            %a{:href => "http://status.gitnotifier.io"} Status
+          %span.footer
             %a{:href => "mailto:#{settings.CONFIG['dev_email_address']}"} Support
           %span.footer
             %a{:href => "https://github.com/andreausu/git-notifier"}
