--- a/views/events.haml
+++ b/views/events.haml
@@ -2,4 +2,4 @@
   %tbody
 %div#spinner
 %div#noevents.hidden
-  %h4 No events found. Your projects probably haven't been starred of forked yet.
+  %h4 No events found. Your projects probably haven't been starred or forked yet.
