--- a/views/faq.haml
+++ b/views/faq.haml
@@ -28,7 +28,7 @@
   .answer
     %p Thanks for asking! You could help improve the service by contributing to our public <a href="https://github.com/andreausu/git-notifier">GitHub repository</a>, or you could make a donation using <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2NUBLSKKDMHC2&lc=US&item_name=Donation&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">PayPal</a> or Bitcoin: <a href="https://blockchain.info/address/12NzvEg19KZoNuQzT39mcmvDD7K14wJenR">12NzvEg19KZoNuQzT39mcmvDD7K14wJenR</a>
 
-  %h3 Is Git Notifer open source? Can I get the source code?
+  %h3 Is Git Notifier open source? Can I get the source code?
   .answer
     %p Yes! We love OSS, you can find all the code that powers this service on <a href="https://github.com/andreausu/git-notifier">GitHub</a>. This project will always be open source.
 
