--- a/views/index.haml
+++ b/views/index.haml
@@ -53,7 +53,7 @@
         for a small fee should the server costs increase too much.<br />
         Anyway, since this project is open source you will always be able to just host your own version of Git Notifier for free.
     %p.col-md-4.col-sm-6
-      %strong Is Git Notifer open source?
+      %strong Is Git Notifier open source?
       %br
         Yes! We love OSS, so rest assured that this project will always be completely open source.<br />
         You can find all the code that powers this service on <a href="https://github.com/andreausu/git-notifier">GitHub</a>.<br />
